--- a/finimalism10.11.css
+++ b/finimalism10.11.css
@@ -2044,11 +2044,22 @@ progress::-webkit-progress-value {
 	align-self: center;
 	-webkit-justify-content: center;
 	justify-content: center;
-	margin-top: 0em;
+	margin-top: -2em;
 	position: relative;
+}
+
+
+@media (orientation: landscape) and (max-width:960px) {
+	.headerTabs {
+		margin-top: -4em !important;
 	}
 }
 
+@media (min-width: 540px) {
+	.layout-mobile .headerTabs {
+		margin-top: -4em !important;
+	}
+}
 
 .mainDrawer {
 	background-color: rgba(0, 0, 0, 0.9);
