--- a/finimalism10.11.css
+++ b/finimalism10.11.css
@@ -2668,7 +2668,7 @@ button.is-emby-button emby-button {
 .layout-tv div.itemMiscInfo.itemMiscInfo-primary,
 .layout-desktop .itemName.originalTitle,
 .layout-tv .itemName.originalTitle {
-	font-size: 1.4em;
+	font-size: 1.5em;
 	font-weight: 600;
 	text-align: center;
 	filter: drop-shadow(0px 4px 1px #0005);
@@ -3456,6 +3456,8 @@ a[href*="shokoanime.com"] {
 	filter: drop-shadow(-2px 4px 1px #0005);
 	margin-top: -0.75em;
 	line-height: 1em;
+	font-size: 1.7em;
+	font-weight: 700;
 }
 
 .layout-desktop .itemName.infoText.originalTitle,
