--- a/finimalism10.11.css
+++ b/finimalism10.11.css
@@ -1459,6 +1459,7 @@ progress::-webkit-progress-value {
 }
 * {
 	scrollbar-color: #fff #0000 !important;
+	scrollbar-width: thin !important;
 }
 
 .syncPlayIconCircle {
