--- a/finimalism10.11-black.css
+++ b/finimalism10.11-black.css
@@ -292,3 +292,39 @@
 .layout-tv .mainDetailButtons.focuscontainer-x {
   background: #000a;
 }
+
+.mainDrawer {
+  background-color: #000a;
+}
+
+.layout-desktop .page.libraryPage.itemDetailPage.noSecondaryNavPage.selfBackdropPage.mainAnimatedPage::before,
+.layout-tv .page.libraryPage.itemDetailPage.noSecondaryNavPage.selfBackdropPage.mainAnimatedPage::before {
+	content: '';
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	background: linear-gradient( 90deg, rgb(0 0 0) 0%, rgba(0, 0, 0, 0.98) 25%, rgba(0, 0, 0, 0.5) 33%, rgba(0, 0, 0, 0) 40% );
+	background-size: cover;
+	opacity: 1;
+	z-index: -1;
+	background-attachment: fixed;
+	pointer-events: none;
+}
+
+.layout-desktop .mainDetailButtons.focuscontainer-x::before, .layout-tv .mainDetailButtons.focuscontainer-x::before,
+.layout-tv .mainDetailButtons.focuscontainer-x::before, .layout-tv .mainDetailButtons.focuscontainer-x::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  width: 19.15em;
+  height: 2.557777em;
+  background-size: cover;
+  background: #000000de;
+  border-top-right-radius: 1em;
+  margin: 1.25em 0;
+  padding-top: 14em;
+  border-top-left-radius: 1em;
+  top: -1.25em;
+}
