--- a/finimalism10.11.css
+++ b/finimalism10.11.css
@@ -1063,7 +1063,7 @@ div[data-role="controlgroup"] a[data-role="button"] {
     top: 3em;
     width: 23em;
     height: 8em;
-    background: #110e1ebd;
+    background: transparent;
     z-index: 5;
     border-radius: 0.7em;
     box-shadow: 0px 2px 8px #0005;
