--- a/finimalism10.11.css
+++ b/finimalism10.11.css
@@ -1726,6 +1726,16 @@ progress::-webkit-progress-value {
 	}
 }
 
+@media all and (max-width: 100em){
+	.layout-desktop #indexPage, .layout-tv #indexPage,
+	.layout-desktop #moviesPage, .layout-tv #moviesPage,
+	.layout-desktop #tvRecommendedPage, .layout-tv #tvRecommendedPage,
+	.layout-desktop #musicRecommendedPage, .layout-tv #musicRecommendedPage {
+		margin-top: 2em;
+		padding-top: 0.5em !important;
+	}
+}
+
 .force-scroll {
 	overflow-y: auto;
 	overflow-x: auto;
@@ -2957,6 +2967,10 @@ button[is="paper-icon-button-light"].cardOverlayButton.cardOverlayButton-hover.i
 	-webkit-filter: drop-shadow(0px 0px 1.5px rgb(0, 0, 0));
 	filter: drop-shadow(0px 0px 1.5px rgb(0, 0, 0));
 	color: #fff;
+}
+
+.layout-desktop .headerTabs.sectionTabs .tabs-viewmenubar.emby-tabs.focusable.scrollX {
+	margin-left: -3vw;
 }
 
 .collectionItems {
@@ -4263,3 +4277,7 @@ content: '';
 	text-overflow: ellipsis;
 }
 
+.layout-desktop .flex.align-items-center.justify-content-center.flex-wrap-wrap.padded-top.padded-left.padded-right.padded-bottom.focuscontainer-x {
+	padding: 0.25em;
+  padding-right: 3vw;
+}
