--- a/finimalism10.11-black.css
+++ b/finimalism10.11-black.css
@@ -77,7 +77,7 @@
 }
 
 .button-flat:hover, .paper-icon-button-light:hover { 
-	color: rgb(255, 255, 255) !important;
+	color: #473391 !important;
 }
 
 .cardOverlayContainer:hover, .dialog, .toast, .raised.homeLibraryButton:hover {
@@ -142,12 +142,6 @@
 	background: #404040 !important;
 }
 
-.innerCardFooter, .countIndicator, .playedIndicator {
-	background: linear-gradient(to right, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0.95) 100%);
-	box-shadow: none;
-	color: rgb(--accent);
-}
-
 .headerTabs.sectionTabs:hover .emby-button {
 	color: #fff !important;
 	box-shadow: none !important;
@@ -188,7 +182,6 @@
 
 @media (hover: hover) and (pointer: fine) {
 	.paper-icon-button-light:hover:not(:disabled) {
-		color: rgba(var(--accent)) !important;
 		background-color: rgba(199, 199, 199, 0.2);
 	}
 }
@@ -327,4 +320,19 @@
   padding-top: 14em;
   border-top-left-radius: 1em;
   top: -1.25em;
+}
+
+.layout-desktop .detailRibbon::before, .layout-tv .detailRibbon::before,
+.layout-tv .detailRibbon::before, .layout-tv .detailRibbon::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background: #0b0b0bcf;
+    background-size: auto;
+  background-size: auto;
+  background-size: cover;
+  z-index: -1;
+  width: 100vw;
 }
