--- a/finimalism10.11.css
+++ b/finimalism10.11.css
@@ -1882,7 +1882,7 @@ progress::-webkit-progress-value {
   width: 3.1em;
 }
 
-:root {--accent: 6, 161, 217;}
+:root {--accent: 133,100,255;}
 
 :root {--rounding: 12px;}
 
